mobile menu added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
             <span><a href="PORTOFOLIO">PORTOFOLIO</a></span>
             <span><a href="CONTACTO">CONTACTO</a></span>
         </nav>
+        
+
+
+  <!-- Top Navigation Menu -->
+  <div class="topnav">
+    <img class="img" src="some.webp" />
+    <div id="myLinks">
+      
+      <span><a href="index.html">HOME</a></span>
+      <span><a href="industrial.html">INDUSTRIAL</a></span>
+      <span><a href="MUSEOS Y PATRIMONIO">MUSEOS Y PATRIMONIO</a></span>
+      <span><a href="GASTRANOMIA">GASTRANOMIA</a></span>
+      <span><a href="PORTOFOLIO">PORTOFOLIO</a></span>
+      <span><a href="CONTACTO">CONTACTO</a></span>
+    </div>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  <!-- End smartphone / tablet look -->
+ 
+
 
 
 <div class="stuff"> 
