--- a/index.html
+++ b/index.html
@@ -17,10 +17,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
-    <!-- SLIDERS -->
-    <meta name="description" content="Prism slider using canvas globalCompositeOperation" />
-    <meta name="keywords" content="prism, images, globalCompositeOperation, canvas, demo, web design, slider" />
+  
     <title>Document</title>
   </head>
   <body>
@@ -33,8 +30,13 @@
         <span><a href="GASTRANOMIA">GASTRANOMIA</a></span>
         <span><a href="PORTOFOLIO">PORTOFOLIO</a></span>
         <span><a href="CONTACTO">CONTACTO</a></span>
+        <span id="lang-btn">
+          <select id="lang-switch">
+              <option value="en">English</option>
+              <option value="ko" selected>한국어</option>
+          </select>
+        </span>
       </nav>
-
 
       <!-- Top Navigation Menu -->
       <div class="topnav">
@@ -274,11 +276,11 @@
   
 </div><!-- /container -->
 
-      <div class="stuff2">
 
-      </div>
-      <section class="inmid">
-        <div class="industrial bdr inmids">
+
+<!-- 4 OPTIONS -->
+      <section class="in-inmid">
+        <div class="industrial bdr in-inmids">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="60"
@@ -337,7 +339,7 @@
               </p>
               <span><a href="industrial.html">More info></a></span>
             </div>
-            <div class="realEstate bdr inmids">
+            <div class="realEstate bdr in-inmids">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="60"
@@ -372,7 +374,7 @@
                   <span><a href="industrial.html">More info></a></span>
                 </div>
 
-                <div class="museum bdr inmids">
+                <div class="museum bdr in-inmids">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="60"
@@ -409,7 +411,7 @@
                       <span><a href="industrial.html">More info></a></span>
                     </div>
 
-                    <div class="gastronomy bdr inmids">
+                    <div class="gastronomy bdr in-inmids">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         width="60"
